--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -5,7 +5,7 @@ div > p {
 }
 
 .content-cell {
-	background-color: #BBDDBB;
+	background-color: #b6d4ee;
 	margin-bottom: 15px;
 	padding: 10px 15px;
 }
@@ -34,7 +34,7 @@ div > p {
 	}
 	
 	#collapsable-nav {
-		background-color: #BBEABB;
+		background-color: #b6d4ee;
 	}
 	
 	#nav-list {		
@@ -44,11 +44,11 @@ div > p {
 	
 	#nav-list li{
 		text-align: center;
-		border: 1px solid #559955;
+		border: 1px solid #2e8de1;
 		margin-bottom:-1px;
 	}
 	#nav-list li:hover{
 		font-weight: bold;
-		background-color: #BBDDBB;
+		background-color: #b6d4ee;
 	}
 }
